# Back-Testing-Framework

./: CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
configs/: bollinger_es.yaml  fundamental_strategies.yaml  momentum_strategies.yaml  parameter_sweep_grid.yaml  strategy_combinations.yaml
examples/: simple_backtest.py  strategy_showcase.py
strategies/: bollinger.py  fundamental_strategies.py  momentum_strategies.py  quality_strategies.py  strategy_combiner.py
tests/: test_strategy.py
trading_core/: __init__.py  cli.py  config.py  engine.py  events.py  orders.py  portfolio.py  reporter.py  strategy.py
